...

                <EditText
                    android:id="@+id/activity_main_edtTxt_bill_amount_id"
                    style="@style/BillAmountText"
                    android:layout_width="match_parent"
...

                <TextView
                    android:id="@+id/activity_main_txtVw_tip_percentage_id"
                    style="@style/NumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_main_txtVw_tip_percentage_hint_id"
                    tools:text="15" />

                <TextView
...

                <TextView
                    android:id="@+id/activity_main_txtVw_tip_amount_id"
                    style="@style/NumberText"
                    android:layout_width="wrap_content"
...

                <TextView
                    android:id="@+id/activity_main_txtVw_people_count_id"
                    style="@style/NumberText"
                    android:layout_width="wrap_content"
...

                <TextView
                    android:id="@+id/activity_main_txtVw_share_id"
                    style="@style/NumberText"
                    android:layout_width="wrap_content"
...

                <TextView
                    android:id="@+id/activity_main_txtVw_total_amount_id"
                    style="@style/NumberText"
                    android:layout_width="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_main_swtch_round_up_id"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"/>
...

                        <TextView
                            android:id="@+id/activity_main_txtVw_quote_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/activity_main_txtVw_quote_author_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                        <LinearLayout
                            android:visibility="gone"
                            android:id="@+id/activity_main_lnrLyt_settings_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                                        android:layout_alignParentStart="true" />
                                    <SeekBar
                                        android:id="@+id/activity_main_skBr_tip_percentage_id"
                                        style="@style/SeekBar"
                                        android:layout_marginStart="12dp"
...

                                    <TextView
                                        android:id="@+id/activity_main_txtVw_tip_percentage_settings_value_id"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
...
                                        android:layout_toEndOf="@id/activity_main_imgVw_people_count_id"/>
                                    <TextView
                                        android:id="@+id/activity_main_txtVw_people_count_settings_value_id"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
...
                                android:layout_height="wrap_content">
                                <Button
                                    android:id="@+id/fragment_settings_btn_done_id"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fragment_main_settings_fab_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
